Fix image alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,5 +16,6 @@ section {
 }
 
 section img {
-    max-width: 33%;
+    max-width: 30%;
+    vertical-align: text-top;
 }
